.happypack/s--1520813195
SyntaxError: Unexpected token (19:5)

[0m [90m 17 | [39m	}
 [90m 18 | [39m
[31m[1m>[22m[39m[90m 19 | [39m	[36mvar[39m [33mModal[39m[33m=[39m [33mReact[39m[33m.[39mcreateClass({
 [90m    | [39m	    [31m[1m^[22m[39m
 [90m 20 | [39m		render[33m:[39m [36mfunction[39m(){
 [90m 21 | [39m			[36mreturn[39m(
 [90m 22 | [39m				[33m<[39m[33mdiv[39m[33m>[39m[0m

BabelLoaderError: SyntaxError: Unexpected token (19:5)

[0m [90m 17 | [39m	}
 [90m 18 | [39m
[31m[1m>[22m[39m[90m 19 | [39m	[36mvar[39m [33mModal[39m[33m=[39m [33mReact[39m[33m.[39mcreateClass({
 [90m    | [39m	    [31m[1m^[22m[39m
 [90m 20 | [39m		render[33m:[39m [36mfunction[39m(){
 [90m 21 | [39m			[36mreturn[39m(
 [90m 22 | [39m				[33m<[39m[33mdiv[39m[33m>[39m[0m

    at transpile (/home/spineor/risorso/node_modules/babel-loader/lib/index.js:64:13)
    at Object.module.exports (/home/spineor/risorso/node_modules/babel-loader/lib/index.js:174:20)
    at applySyncOrAsync (/home/spineor/risorso/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/home/spineor/risorso/node_modules/happypack/lib/applyLoaders.js:268:5)
    at /home/spineor/risorso/node_modules/happypack/lib/applyLoaders.js:131:7
    at applyPitchLoader (/home/spineor/risorso/node_modules/happypack/lib/applyLoaders.js:184:14)
    at applyPitchLoader (/home/spineor/risorso/node_modules/happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoaders (/home/spineor/risorso/node_modules/happypack/lib/applyLoaders.js:222:4)
    at applyLoaders (/home/spineor/risorso/node_modules/happypack/lib/applyLoaders.js:116:3)
    at HappyWorker.compile (/home/spineor/risorso/node_modules/happypack/lib/HappyWorker.js:32:3)
    at Object.compile (/home/spineor/risorso/node_modules/happypack/lib/HappyForegroundThreadPool.js:61:14)
    at HappyPlugin.compileAndUpdateCache (/home/spineor/risorso/node_modules/happypack/lib/HappyPlugin.js:344:14)
    at HappyPlugin.compileInForeground (/home/spineor/risorso/node_modules/happypack/lib/HappyPlugin.js:321:25)
    at HappyPlugin.compile (/home/spineor/risorso/node_modules/happypack/lib/HappyPlugin.js:237:32)
    at Object.HappyLoader (/home/spineor/risorso/node_modules/happypack/lib/HappyLoader.js:42:15)
    at LOADER_EXECUTION (/home/spineor/risorso/node_modules/loader-runner/lib/LoaderRunner.js:119:14)